added more javascript

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang"en">
+<html lang="en">
 <head>
 <title>calc</title>
-<meta charset="UTF-8"/>
-<link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js"></script>
 </head>
-<body>
-    
-<script src="scripts/main.js"></script>
-</body>
+<body></body> 
+</html>
